# mgxdemo

./: CLAUDE.md
backend/: .env.example  .gitignore  pyproject.toml  run_with_debug_logs.sh
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  messages.py  sandbox.py  sessions.py
backend/app/core/: deps.py  security.py
backend/app/models/: __init__.py  agent_execution.py  message.py  session.py  todo.py  user.py
backend/app/prompts/: deepseek_system_prompt.md
backend/app/schemas/: __init__.py  message.py  session.py  user.py
backend/app/services/: ai_service.py  auth_service.py  base.py  deepseek_service.py  sandbox_service.py
backend/app/static/: about.html  api.html  app.html  contact.html  faq.html  getting-started.html  index.html  login.html  preview.html  privacy.html  register.html  terms.html  user-guide.html
backend/app/static/css/: style.css
backend/app/static/js/: api.js  app.js  auth.js  landing.js  progress.js  sse-client.js
backend/app/tools/: __init__.py  agent_sandbox.py  base.py  bash_tool.py  check_tool.py  list_tool.py  read_tool.py  todo_tool.py  todo_write.py  write_tool.py
backend/app/utils/: sse.py
backend/docs/: EXECUTION_PROGRESS_FEATURE.md  deploy.lint.md  execution_progress_integration.md
backend/tests/: conftest.py  test_check_tool.py  test_execution_progress.py  test_message_truncation.py  test_sandbox_tools.py
